# ManyVecs

./: .gitignore  .replit  Cargo.toml  LICENSE  README.md  replit.nix
examples/: editing_vec.rs  macroed.rs  simple.rs
src/: lib.rs  vec2.rs
src/legacy/: mod.rs  vec2.rs
src/legacy/tests/: vec2.rs
src/macroed/: mod.rs  vec2.rs
src/macroed/tests/: vec2.rs
src/tests/: vec2.rs
